项目启动脚本